--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.11.1",
     "express-validator": "^7.0.1",
-    "prisma": "^5.2.0"
+    "prisma": "^5.2.0",
+    "winston": "^3.10.0"
   },
   "scripts": {
     "dev": "npx tsx src/index.ts",
