--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,4 +13,4 @@ services:
       - '8080:8080'
     command: node build/index.js
     restart: unless-stopped
-    env_file: .env.production
+    env_file: .env
