--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "@jest/globals": "^29.7.0",
+    "@jest/types": "^29.6.3",
     "@prisma/client": "^5.2.0",
     "@types/express": "^4.17.17",
+    "@types/supertest": "^2.0.12",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -15,13 +18,17 @@
   "scripts": {
     "dev": "npx tsx src/index.ts",
     "dev:watch": "npx tsx watch src/index.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest"
   },
   "type": "commonjs",
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
   }
 }
